--- a/teamrosters.html
+++ b/teamrosters.html
@@ -63,11 +63,11 @@
     </tr>
      </table>
      <h4 style="color:white">Dark/Hidden Sectors Experiments</h4>
-       <table class="table table-bordered"style="background-color:rgb(119, 128, 175) width="100%">
+       <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <td width="(100/3)%"><i><u><a href="https://na64.web.cern.ch/" style="color:white">CERN SPS/NA64</u></i></td>
-      <td width="(100/3)%"><i><u><a href="https://confluence.slac.stanford.edu/display/hpsg/Heavy+Photon+Search+Experiment" style="color:white">SLAC/HPS</u></i></td>
-      <td width="(100/3)%"><i><u><a href="http://people.roma2.infn.it/~dama/web/home.html" style="color:white">DAMA</u></i></td>
+      <td><i><u><a href="https://na64.web.cern.ch/" style="color:white">CERN SPS/NA64</u></i></td>
+      <td><i><u><a href="https://confluence.slac.stanford.edu/display/hpsg/Heavy+Photon+Search+Experiment" style="color:white">SLAC/HPS</u></i></td>
+      <td><i><u><a href="http://people.roma2.infn.it/~dama/web/home.html" style="color:white">DAMA</u></i></td>
     </tr>
     </table>
      <br>
@@ -76,45 +76,45 @@
        <h4 style="color:white">Top Quark Experiments</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <td><i>Associated Higgs Boson Top-Quark Production ttH→2ℓ+1τhadat s√=13~TeV with ATLAS</i></td>
-      <td><i>Single top quark production measurements in CMS (15' + 5')</i></td>
-      <td><i>Search for Vector-Like Top Quarks in the CMS detector</i></td>
-      <td><i>Inclusive top-quark pair production cross section in pp collisions at \sqrt{s} = 13 TeV in CMS in the dileptonic final state</i></td>
-      <td><i>Production of heavy Higgs bosons and decay into top quarks at the LHC (15' + 5')</i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072245/" style="color:white">Associated Higgs Boson Top-Quark Production ttH→2ℓ+1τhadat s√=13~TeV with ATLAS</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2213094/">Single top quark production measurements in CMS (15' + 5')</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071807/">Search for Vector-Like Top Quarks in the CMS detector</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071340/">Inclusive top-quark pair production cross section in pp collisions at \sqrt{s} = 13 TeV in CMS in the dileptonic final state</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072555/">Production of heavy Higgs bosons and decay into top quarks at the LHC (15' + 5')</u></i></td>
     </tr>
     <tr>
-      <td><i>Search for Standard Model Production of Four Top Quarks</i></td>
-      <td><i>Measurement of top quark properties in single top production (15' + 5')</i></td>
-      <td><i>Search for scalar top quark production in all hadronic channel</i></td>
-       <td><i>Top quark mass calibration for Monte-Carlo event generators (15' + 5')</i></td>
-       <td><i>First attempt to search for H+ to cbbar in top quark decays at CMS</i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071326/">Search for Standard Model Production of Four Top Quarks</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072557/">Measurement of top quark properties in single top production (15' + 5')</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072277/">Search for scalar top quark production in all hadronic channel</u></i></td>
+       <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072338/">Top quark mass calibration for Monte-Carlo event generators (15' + 5')</u></i></td>
+       <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071321/">First attempt to search for H+ to cbbar in top quark decays at CMS</u></i></td>
     </tr>
     </table>
       <h4 style="color:white">Bottom Quark Experiments</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <td><i>Novel real-time calibration and alignment at LHCb for RunII (20' + 5')</i></td>
-      <td><i>b-hadron production at LHCb (15' + 5')</i></td>
-      <td><i>Rare leptonic and semileptonic b-hadron decays and Tests of Lepton Flavour Universality at LHCb (10' + 5')</i></td>
-  <td><i>Electroweak scale exotica with LHCb (15' + 5')</i></td>
-      <td><i>Search for a Standard Model Higgs boson produced in association w a W or Z boson decaying to bottom quarks</i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071500/">Novel real-time calibration and alignment at LHCb for RunII (20' + 5')</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072026/">b-hadron production at LHCb (15' + 5')</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072525/">Rare leptonic and semileptonic b-hadron decays and Tests of Lepton Flavour Universality at LHCb (10' + 5')</u></i></td>
+    <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072055/">Electroweak scale exotica with LHCb (15' + 5')</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071318/">Search for a Standard Model Higgs boson produced in association w a W or Z boson decaying to bottom quarks</u></i></td>
          </tr>
      </table>
     <h4 style="color:white">NOvA Experiments</h4>
        <table class="table table-bordered"style="background-color:rgb(119, 128, 175);color:white">
     <tr>
-      <td><i>Recent Results of Electron-Neutrino Appearance Measurement at NOvA (13' + 2')</i></td>
-      <td><i> Neutrino Induced Neutral Current Coherent π^0 Production in The NOvA Near Detector</i></td>
-      <td><i>Looking amongst the neutrinos for lightweight dark matter in the NOva Near Dectector </i></td>
-        <td><i>Measurement of c-jet tagging efficiency in ATLAS with W+c-jet events</i></td>
-      <td><i>Extrapolation, Systematics and Results for the NOvA Disappearance Analysis</i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2144798/">Recent Results of Electron-Neutrino Appearance Measurement at NOvA (13' + 2')</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2194565/">Neutrino Induced Neutral Current Coherent π^0 Production in The NOvA Near Detector</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072009/">Looking amongst the neutrinos for lightweight dark matter in the NOva Near Dectector</u></i></td>
+        <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071342/">Measurement of c-jet tagging efficiency in ATLAS with W+c-jet events</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071918/">Extrapolation, Systematics and Results for the NOvA Disappearance Analysis</u></i></td>
          </tr>
          <tr>
-      <td><i>Constraints on the Neutrino Flux in NOvA using the Near Detector Data</i></td>
-        <td><i>Systematic Uncertainties in the NOvA Electron Neutrino Appearance Analysis </i></td>
-      <td><i>Search for highly-ionizing particles in the NOvA Far Detector</i></td>
-      <td><i>Cross-section Measurements with the NOvA ND</i></td>
-        <td><i>Neutrino Identification with a Convolutional Neural Network in the NOvA Detectors </i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2208753/">Constraints on the Neutrino Flux in NOvA using the Near Detector Data</u></i></td>
+        <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1071966/">Systematic Uncertainties in the NOvA Electron Neutrino Appearance Analysis</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072310/">Search for highly-ionizing particles in the NOvA Far Detector</u></i></td>
+      <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/2144953/">Cross-section Measurements with the NOvA ND</u></i></td>
+        <td><i><u><a href="https://indico.cern.ch/event/432527/contributions/1072502/">Neutrino Identification with a Convolutional Neural Network in the NOvA Detectors</u></i></td>
         </tr>
     </table>
     
