--- a/rules.html
+++ b/rules.html
@@ -63,7 +63,7 @@
         </ul>
       </li>
             <li><a href="scoringrubric.html">The Hunt</a></li>
-            <li><a href="joinatournament.html">Join a Tournament</a></li>
+            <li><a href="joinatournamentchecklogin.js">Join a Tournament</a></li>
             <li><a href="instructors.html">The Instructors</a></li>
         </ul>
 
