--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
     }
 </style>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -81,8 +80,7 @@
         <li><a href="login.html" style="color:white"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     </ul>
      </div>
-     </nav>
-     <div class="w3-container"> 
+     </nav> 
      <div class="center">
          <h1 style="text-align:center;color:white"><font face="sans-serif"><i> Welcome </i></h1>
          <h2 style="text-align:center;color:white"><font face="sans-serif"> to </h2>
@@ -90,7 +88,7 @@
          <h3 style="text-align:center;color:white"><i> ~ unlock the potential ~ </i></h3> 
      </div>                 
      <div class="footer">
-         <i><p>Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> | 
+         <i><p style="margin-left:15px">Developed at <u><a href="http://physics.ku.edu/" style="color:white"> The University of Kansas - Physics & Astronomy Department</u></a> | 
          <u><a href="about.html" style="color:white">About</u></a> | <u><a href="creators.html" style="color:white">The Creators</i></u></a></p>
      </div>
      
