--- a/astroparticle.html
+++ b/astroparticle.html
@@ -12,7 +12,7 @@
     }
     .cd-fixed-bg.cd-fixed-bg--1
     {
-        background-image: url("https://i.ytimg.com/vi/tsjd7xdgfjA/maxresdefault.jpg");
+        background-image: url("http://ak5.picdn.net/shutterstock/videos/23818045/thumb/1.jpg");
     }
     .cd-fixed-bg
     {
