--- a/joinatournament.html
+++ b/joinatournament.html
@@ -47,6 +47,7 @@
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.1.1/firebaseui.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="joinatournamentchecklogin.js"></script>
 </head>
 <body>
     <div class="cd-fixed-bg cd-fixed-bg--1">
