--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -84,7 +84,7 @@
             <div class="cd-scrolling-bg__content">
      <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Dark Matter</b></i></h2> 
      <h4 style="margin-left:5px;color:white">WIMP & Dark/Hidden Sectors</h4>
-     <a href="The Hunt.pdf"></a>		    
+     <a href="The Hunt.pdf">The_Hunt_pdf Download</a>		    
      <table colspan="3" class="table table-bordered" style="color:white">
 	 <tr>
 	        <th scope="col"></th>
