--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -84,67 +84,31 @@
             <div class="cd-scrolling-bg__content">
      <h2 style="text-align:left;margin-left:5px;color:white"><b><i>Dark Matter</b></i></h2> 
      <h4 style="margin-left:5px;color:white">WIMP & Dark/Hidden Sectors</h4>
-     <a href="The Hunt.pdf">The_Hunt_pdf Download</a>		    
+		    
      <table colspan="3" class="table table-bordered" style="color:white">
 	 <tr>
-	        <th scope="col"></th>
-	        <th scope="col">Largest Dataset (+2)</th>
-       	    <th scope="col">Most Number of Significant Figures (+0.5)</th>
-            <th scope="col">Highest/Lowest Temperature Mentioned (+1)</th>
-	        <th scope="col">Highest/Lowest Energy Value (+2)</th>
-	        <th scope="col">Amount of Feynman Diagrams (+2)</th>
-	        <th scope="col">Most Number of Questions Asked by Audience in a Session (+1)</th>
-	        <th scope="col">Most Data Points on a Graph   (+1)</th>
-      	    <th scope="col">Largest Number of Graphs Used 	(>_11 = 1, >_8 = 0.5, >5 = 0)</th>
-     	    <th scope="col">Most Amount of References?		(+1)</th>
-     	    <th scope="col">Most Greek Letters Used	(+1)</th>
-    	    <th scope="col">How many times research genre word is mentioned 
-                          10			(0)	
-                          11 - 20		(+.5)
-                          21 - 30		(+1)
-                          31+			(+2)			</th>
-	        <th scope="col">Using a pointer 	(+0.5)	</th>
-	        <th scope="col">Most anecdotes told 		(+2)	</th>
-	        <th scope="col">Time presented (±2min)
-			= time allotted 		(+2)
-			> time allotted			(0)
-			< time allotted 		(+0.5)		</th>
-	 </tr>
-     	 <tr>
-        	<td><i>PICO</i></td>
-         	<td></td>
-        	<td></td>
-	    	<td></td>
-	     	<td></td>
-	     	<td></td>
-	     	<td></td>
-         	<td></td>
-         	<td></td>
-	     	<td></td>
-	     	<td></td>
-	     	<td></td>
-	     	<td></td>
-		<td></td>
-         	<td></td>
-     	</tr>
-     <tr>
-         <td><i>SuperCDMS</i></td>
-         <td></td>
-         <td></td>
-	 <td></td>
-         <td></td>
-	 <td></td>
-	 <td></td>
-         <td></td>
-         <td></td>
-	 <td></td>
-      	 <td></td>
-	 <td></td>
-	 <td></td>
-	 <td></td>
-         <td></td>
-     </tr>
+	    <th scope="col" style="text-align:center">Largest Dataset; +2</th>
+	    <th scope="col">Highest or Lowest Temperature; +1</th>
+       	    <th scope="col">Most Number of Feynman Diagrams; +2</th>
+            <th scope="col">Most Greek Letters; +1</th>
+	    <th scope="col">Most Anecdotes Told; +2</th>
+	 </tr>		 
+	 <tr>	     
+	    <th scope="col">Using a Pointer; +0.5</th>
+	    <th scope="col">Number of Graphs Used: > 10 = +2; <br> 5 - 9 = +1; <br> 1 - 4 = +0.5</th>
+	    <th scope="col">Most Data Points on a Graph; +1</th>
+      	    <th scope="col">Most Photographs Included; +1</th>
+     	    <th scope="col">Most Number of Significant Figures; +0.5</th>
+	 </tr>		 
+     	    <th scope="col">Time Presented: <br> Time Allotted = +2; <br> < Time Allotted = +0.5</th>
+    	    <th scope="col">Most Geometric Shapes; +2</th>
+	        <th scope="col">Most Questions Asked by Audience; +1</th>
+	        <th scope="col">Most Standard Deviation Graphs; +2</th>
+	        <th scope="col">Most Arrows Used to Point to Other Items; +1</th>
+	 </tr>    
 </table>
+   
+  <a href="The Hunt.pdf" style="color:white">The_Hunt_pdf View</a>		    
 
   <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
