--- a/scoringrubric.html
+++ b/scoringrubric.html
@@ -2,10 +2,6 @@
 <html>
 <head>
 <style>
-    body
-	{
-		height: 5000px;
-	}
     .flex-container
     {
         display: flex;
@@ -36,33 +32,6 @@
         border-radius: 5px;
         padding: 15px;
     }	
-    #top
-    {
-	width: 40px;
-	line-height: 40px;
-	overflow: hidden;
-	z-index: 999;
-	display: none;
-	cursor: pointer;
-	-moz-transform: rotate(270deg);
-	-webkit-transform: rotate(270deg);
-	-o-transform: rotate(270deg):
-	-ms-transform: rotate(270deg);
-	transform: rotate(270deg);
-	position: fixed;
-	bottom: 50px;
-	right: 10px;
-	background-color: #DDD;
-	color: #555;
-	text-align: center;
-	font-size: 30px;
-	text-decoration: none;	    
-      }
-      #top:hover
-	{
-		background-color: #DDF;
-		color: #000;
-	}
 </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -114,7 +83,6 @@
        <div class="w3-container">
        <div class="cd-scrolling-bg cd-scrolling-bg--color-2">
             <div class="cd-scrolling-bg__content">
-		     <a id="top" title="Back to Top" href="#">&#10148;</a>
      <h2 style="color:white"><b><i>The Hunt</b></i></h2> 
      	<br><br>	    
      <table colspan="3" class="table table-bordered" style="color:white">
@@ -140,7 +108,11 @@
 	 </tr>    
 </table>
   <a href="thehunt.pdf" style="color:white"><u>The Hunt pdf View</u></a>		    
-<br><br><br><br>	       
+<br><br><br><br>
+<button style="float:right" onclick="scrollWin()">Back to Top</button>	
+	       <script>
+		       function scrollWin(){
+			       window.scrollTo(0, 0);}</script>
   <div class="flex-container">
              <p style="color:white">Developed at <a href="http://physics.ku.edu/" style="color:white"><u> The University of Kansas - Physics & Astronomy Department</u></a> | 
              <a href="about.html" style="color:white"><u>About</u></a> | <a href="creators.html" style="color:white"><u>The Creators</u></a></p>
