--- a/rules.html
+++ b/rules.html
@@ -1,4 +1,3 @@
-                                                        <!--"thegame.html"-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -90,14 +89,13 @@
         </ul>
       	   	</li>
             <li class="dropdown">
-                  <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Stats
+                  <a class="dropdown-toggle" data-toggle="dropdown" href="joinatournament.html">Recruit
                       <span class="caret"></span></a>
                       <ul class="dropdown-menu">
                           <li><a href="joinatournament.html">Join a Tournament</a></li>
                           <li><a href="leaderboard.html">Leaderboard</a></li>
                       </ul>
                   </li>
-            <li><a href="instructors.html">The Instructors</a></li>
             <li class="dropdown">
            <a class="dropdown-toggle" data-toggle="dropdown" href="conf.html">Conferences
            <span class="caret"></span></a>
@@ -109,6 +107,7 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
+            <li><a href="instructors.html">The Instructors</a></li>
             <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
             <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             <a href="https://ku.edu/" class="navbar-right"><img src="kansas-jayhawks-profile.jpg" style="width:45px;height:51px"></a>
